[tool.poetry]
name = "client"
version = "0.1.0"
description = ""
authors = ["uibo <boui000210@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
eth-hash = {extras = ["pycryptodome"], version = "^0.7.1"}


[tool.poetry.group.dev.dependencies]
coincurve = "^21.0.0"
eth-utils = "^5.3.0"
rlp = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
