[tool.poetry]
name = "client"
version = "0.1.0"
description = ""
authors = ["uibo <boui000210@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
py-evm = "^0.12.1b1"
eth-rlp = "^2.2.0"
eciespy = "^0.4.4"
pycryptodome = "^3.23.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
